# fellytip

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  Trunk.toml  server.local.toml.example
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: sprites.yml
assets/: bestiary.toml
assets/models/hero/: pipeline_state.json
assets/models/iron_wolves_npc/: pipeline_state.json
contributions/: bounty-1777244162.md  bounty-1777244284.md  bounty-1777244374.md  bounty-1777244945.md
crates/client/: Cargo.toml  index.html
crates/client/assets/characters/: characterLargeFemale.glb  characterLargeMale.glb  characterMedium.glb  characterSmall.glb
crates/client/assets/shaders/: water.wgsl
crates/client/assets/synty/buildings/: blacksmith.glb  church.glb  house_01.glb  house_02.glb  house_03.glb  house_04.glb  house_05.glb  house_06.glb  house_07.glb  house_08.glb  house_09.glb  house_10.glb  hut_01.glb  hut_02.glb  stables.glb  tavern.glb  windmill_base.glb  windmill_blades.glb
crates/client/assets/synty/nature/: bush_01.glb  bush_02.glb  bush_03.glb  bush_04.glb  bush_05.glb  bush_06.glb  tree_dead_01.glb  tree_dead_02.glb  tree_dead_03.glb  tree_dead_04.glb  tree_large_01.glb  tree_large_02.glb  tree_pine_cluster_01.glb  tree_pine_cluster_02.glb  tree_pine_cluster_04.glb  tree_pine_cluster_05.glb  tree_round_01.glb  tree_round_02.glb  tree_round_03.glb  tree_round_04.glb  tree_thin_01.glb  tree_thin_02.glb  tree_thin_03.glb  tree_thin_04.glb  tree_thin_05.glb  tree_thin_06.glb
crates/client/assets/town/: fountain-round.glb
crates/client/src/: main.rs
crates/client/src/plugins/: action_menu.rs  audio.rs  battle.rs  billboard_sprite.rs  camera.rs  character_animation.rs  class_selection.rs  click_to_move.rs  debug_console.rs  entity_renderer.rs  floating_text.rs  hud.rs  map.rs  mod.rs  particles.rs  pause_menu.rs  portal_renderer.rs  scene_decoration.rs  scene_lighting.rs  settings.rs  skybox.rs  target_select.rs  tile_renderer.rs  zone_cache.rs  zone_renderer.rs
crates/client/src/plugins/terrain/: chunk.rs  lod.rs  manager.rs  material.rs  mod.rs  water.rs  water_material.rs
crates/combat-rules/: Cargo.toml
crates/combat-rules/src/: lib.rs
crates/combat-rules/src/combat/: types.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  movement.rs
crates/game/src/plugins/: bot.rs  combat.rs  combat_test.rs  dungeon.rs  ecology.rs  interest.rs  map_gen.rs  mod.rs  party.rs  perf.rs  persistence.rs  physics_world.rs  portal.rs  story.rs
crates/game/src/plugins/ai/: goal.rs  mod.rs  pathfinding.rs  population.rs  surface_danger.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/plugins/: ai.rs  character_persistence.rs  combat.rs  combat_test.rs  dm.rs  dungeon.rs  ecology.rs  interest.rs  map_gen.rs  mod.rs  nav.rs  party.rs  perf.rs  portal.rs  story.rs  world_sim.rs
crates/server/src/plugins/ai/: battle.rs  mod.rs  pathfinding.rs  population.rs  surface_danger.rs
crates/shared/: Cargo.toml
crates/shared/src/: bestiary.rs  bridge.rs  components.rs  inputs.rs  lib.rs  math.rs  protocol.rs  resources.rs  sprite_math.rs  utils.rs
crates/shared/src/combat/: e2e_tests.rs  interrupt.rs  mod.rs  rules.rs  spells.rs  types.rs
crates/shared/src/world/: art_direction.rs  cave.rs  civilization.rs  dungeon.rs  ecology.rs  faction.rs  grid.rs  map.rs  mod.rs  nav.rs  pathfinding.rs  population.rs  schedule.rs  story.rs  war.rs  zone.rs
crates/shared/tests/: coverage_gaps.rs
crates/tui/: Cargo.toml
crates/tui/src/: brp.rs  main.rs
crates/world-types/: Cargo.toml
crates/world-types/src/: bounds.rs  cave.rs  civilization.rs  dungeon.rs  ecology.rs  faction.rs  lib.rs  map.rs  mesh.rs  population.rs  zone.rs
docs/: PLAN.md  architecture.md  brp.md  dnd5e-srd-reference.md  milestones.md  requirements.md
docs/lore/: sunken-realm.md
docs/lore/factions/: ash-covenant.md  deep-tide.md  iron-wolves.md  merchant-guild.md
docs/plans/: configurable-map-dimensions.md  faction-prestige.md  sprite_studio_pipeline.md
docs/systems/: civilization.md  combat.md  factions.md  networking.md  pathfinding.md  perf.md  persistence.md  rendering.md  underdark.md  underground.md  world-map.md  world-sim.md  zones.md
migrations/: 001_initial.sql  002_world_map.sql  003_reputation.sql  004_player_characters.sql  005_civilization_sim.sql
scripts/: smoke_test.sh
tools/: audio_sync.py  audio_sync.toml  convert_characters.py  portal_screenshot.sh
tools/character_studio/: Cargo.toml  README.md
tools/character_studio/src/: assembler.rs  layout.rs  lib.rs  manifest.rs  meshy.rs  parallel.rs  pipeline_state.rs  postprocess.rs
tools/character_studio/src/studio/: app.rs  main.rs  mod.rs
tools/combat_sim/: Cargo.toml
tools/combat_sim/src/: main.rs
tools/mesh_gen/: Cargo.toml
tools/mesh_gen/src/: dalle.rs  main.rs  meshy.rs  pipeline.rs
tools/preview/: Cargo.toml
tools/preview/src/: main.rs
tools/ralph/: Cargo.toml
tools/ralph/src/: brp.rs  harness.rs  main.rs
tools/ralph/src/scenarios/: basic_movement.rs  combat_resolves.rs  ecology_dynamics.rs  mod.rs  movement_e2e.rs  npc_spawn_with_dm.rs  physics_buildings.rs  physics_terrain.rs  player_moves.rs  underdark_e2e.rs  underground_e2e.rs  war_party_e2e.rs
tools/sprite_gen/: Cargo.toml  README.md
tools/sprite_gen/src/: assembler.rs  generator.rs  incremental.rs  layout.rs  lib.rs  main.rs  manifest.rs  openai.rs  palette.rs  seeding.rs  stability.rs  ui_main.rs
tools/sprite_gen/src/studio/: app.rs  main.rs  mod.rs
tools/sprite_gen/src/ui/: mod.rs
tools/sprite_studio/: Cargo.toml  README.md
tools/sprite_studio/src/: assembler.rs  layout.rs  lib.rs  manifest.rs
tools/sprite_studio/src/studio/: app.rs  main.rs
tools/synty_convert/: convert.ps1  convert.py  manifest.toml
tools/world_gen/: Cargo.toml
tools/world_gen/src/: main.rs
tools/worldwatch/: Cargo.toml  README.md
tools/worldwatch/src/: app.rs  brp.rs  db.rs  dm.rs  main.rs  state.rs
