[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/server",
    "crates/client",
    "tools/combat_sim",
    "tools/world_gen",
    "tools/ralph",
    "tools/sprite_gen",
    "tools/worldwatch",
]

[workspace.dependencies]
bevy                = { version = "0.18", default-features = false }
lightyear           = { version = "0.26.4", default-features = false }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
bincode             = "1"
sqlx                = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio               = { version = "1", features = ["full"] }
rand                = "0.10"
rand_chacha         = "0.10"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
anyhow              = "1"
thiserror           = "2"
smol_str            = { version = "0.3", features = ["serde"] }
uuid                = { version = "1", features = ["v4", "serde"] }
proptest            = "1"
toml                = "0.8"
proptest-derive     = "0.4"
bevy_egui           = { version = "0.39", default-features = false }
bevy-inspector-egui = { version = "0.36", default-features = false }
reqwest             = { version = "0.12", features = ["json", "blocking"] }
image               = { version = "0.25", default-features = false, features = ["png"] }
ron                 = "0.8"
color_quant         = "1"
fellytip-shared     = { path = "crates/shared" }

[profile.dev.package."*"]
opt-level = 3
