[package]
name    = "fellytip-client"
version = "0.1.0"
edition = "2021"

[features]
debug = []
# Fixed-orientation zoomable isometric camera.  When enabled, right/middle-click
# drag no longer rotates the view — only scroll-wheel zoom is active.  Leaving
# this off keeps the orbit camera useful for top-down debugging.
#
# `BillboardSpritePlugin` is always registered and acts as an additive layer
# over the PBR renderer for any entity kind that has a sprite atlas on disk.
locked_iso = []

[dependencies]
fellytip-shared    = { workspace = true }
fellytip-server    = { path = "../server" }
bevy               = { workspace = true, default-features = true, features = ["keyboard"] }
bevy_egui          = { workspace = true, features = ["render"] }
anyhow             = { workspace = true }
rand               = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }
smol_str           = { workspace = true }
image              = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy               = { workspace = true, features = ["bevy_remote"] }
tracing-subscriber = { workspace = true }
