[package]
name    = "fellytip-server"
version = "0.1.0"
edition = "2021"

[dependencies]
fellytip-shared    = { workspace = true }
bevy               = { workspace = true, features = ["bevy_log", "multi_threaded", "bevy_remote"] }
lightyear          = { workspace = true, features = ["std", "server", "client", "netcode", "udp", "replication"] }
sqlx               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
