[package]
name    = "fellytip-server"
version = "0.1.0"
edition = "2021"

[dependencies]
fellytip-shared    = { workspace = true }
bevy               = { workspace = true, features = ["bevy_log", "multi_threaded", "bevy_remote"] }
lightyear          = { workspace = true, features = ["std", "server", "client", "netcode", "udp", "replication"] }
rand               = { workspace = true }
serde_json         = { workspace = true }
bincode            = { workspace = true }
smol_str           = { workspace = true }
sqlx               = { workspace = true }
uuid               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
