[package]
name    = "fellytip-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "fellytip_server"
path = "src/lib.rs"

[[bin]]
name = "fellytip-server"
path = "src/main.rs"

[dependencies]
fellytip-shared    = { workspace = true }
fellytip-game      = { workspace = true }
bevy               = { workspace = true, features = ["bevy_log", "multi_threaded", "bevy_remote"] }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
tracing            = { workspace = true }
