[package]
name    = "fellytip-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy       = { workspace = true }
lightyear  = { workspace = true, features = ["std", "server", "client", "replication"] }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
smol_str   = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
