[package]
name    = "fellytip-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
fellytip-combat-rules = { path = "../combat-rules" }
bevy       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
uuid       = { workspace = true }
smol_str   = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
smallvec    = { version = "1", features = ["serde"] }
glam        = "0.30"
