[package]
name    = "mesh_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
fellytip-shared    = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
tokio              = { workspace = true }
clap               = { version = "4", features = ["derive"] }
