[package]
name    = "worldwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worldwatch"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
reqwest            = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }

# Standalone egui runner. Version matches egui 0.33.x already in the workspace
# lock (pulled by bevy_egui 0.39). Using glow (OpenGL) backend avoids a wgpu
# version conflict with Bevy's wgpu already in the lock file.
eframe    = { version = "0.33", default-features = false, features = ["glow"] }
tray-icon = "0.17"
image     = { version = "0.25", default-features = false, features = ["png"] }
